Renaming iBBwAQ0DJnzdLyR to pgslot pg888th  pg888th

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iBBwAQ0DJnzdLyR",
+  "name": "pgslot pg888th  pg888th ",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "pgslot pg888th  pg888th ",
